fix(vite-plugin): enhance hot module reloading and dependency tracking
- Updated the `handleHotUpdate` method to improve the invalidation of virtual CSS modules, ensuring that changes are accurately reflected during development.
- Removed unnecessary file watcher registration logic, streamlining the dependency tracking process.
- Adjusted the `resolveId` function to simplify the resolution of virtual CSS modules, enhancing clarity and maintainability in the codebase.
- Added logging for better debugging during hot updates, improving the development experience.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -73,10 +73,7 @@
       "description": "Select package to publish",
       "default": "vindur",
       "type": "pickString",
-      "options": [
-        "vindur",
-        "vite-plugin"
-      ]
+      "options": ["vindur", "vite-plugin", "eslint-plugin"]
     },
     {
       "id": "version",
@@ -94,7 +91,7 @@
         },
         {
           "label": "major",
-          "value": "major"  
+          "value": "major"
         }
       ]
     }
