fix(eslint-plugin): update peer dependencies and transform error location handling
- Updated the peer dependency for `vindur` in the eslint-plugin to allow for broader compatibility.
- Refined the `TransformError` class to ensure the `loc` property is always defined, enhancing error reporting consistency.
- Improved the serialization of `TransformError` in tests to provide clearer location information.
- Adjusted test cases to reflect changes in error handling and ensure accurate warnings for missing CSS classes.

--- a/eslint-plugin/package.json
+++ b/eslint-plugin/package.json
@@ -33,9 +33,6 @@
   "engines": {
     "node": ">=20.0.0"
   },
-  "dependencies": {
-    "vindur": "workspace:*"
-  },
   "devDependencies": {
     "@eslint/js": "catalog:",
     "@ls-stack/utils": "catalog:",
@@ -50,6 +47,7 @@
     "vitest": "catalog:"
   },
   "peerDependencies": {
-    "eslint": "^9.0.0"
+    "eslint": "^9.0.0",
+    "vindur": "*"
   }
 }
