chore: update eslint-plugin dependencies and add transform caches
- Updated the `eslint-plugin` package to include `vindur` as a workspace dependency.
- Added `transformDynamicColorCache` and `transformFunctionCache` parameters to the `runVindurTransform` function for improved caching management during linting.

--- a/eslint-plugin/package.json
+++ b/eslint-plugin/package.json
@@ -44,7 +44,8 @@
     "eslint-vitest-rule-tester": "^2.2.1",
     "tsup": "catalog:",
     "typescript": "catalog:",
-    "vitest": "catalog:"
+    "vitest": "catalog:",
+    "vindur": "workspace:*"
   },
   "peerDependencies": {
     "eslint": "^9.0.0",
